--- a/src/guides/main/what-is-fuse-network-fuse.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn all about the Fuse Network
-created: '2023-08-02T07:57:11.545Z'
+created: '2023-08-02T07:58:43.833Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse
 name: 'What is Fuse Network? '
@@ -14,11 +14,7 @@ steps:
 
        
     name: Introduction
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: 8add3228-56e5-4ae9-aaa0-594ac87dda17
+    stepItems: []
     uuid: c1534bcd-744c-4f3e-95a3-615152ce3deb
   - content: >-
       The underlying blockchain is a Layer 1 Ethereum Virtual Machine
@@ -69,5 +65,5 @@ steps:
     uuid: 8d9b3926-3651-4b48-bbb7-6eab2a9331c6
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: bcacb123-1f40-481c-b5d2-b23db73766e4
+uuid: what-is-fuse-network-fuse
 version: 1
