--- a/src/guides/main/what-is-fuse-network-fuse.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Learn all about the Fuse Network
-created: '2023-08-02T12:07:42.374Z'
+created: '2023-08-02T12:13:38.227Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse
 name: 'What is Fuse Network? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse.io (or simply Fuse) was launched in 2019 with the aim to offer
@@ -25,6 +25,126 @@ steps:
     name: The Fuse Blockchain
     stepItems: []
     uuid: 68743762-e2b2-43ac-b713-207460ceaba8
+  - content: >
+      Fuse SDK and APIs are a set of tools designed to let companies plug Web3
+      services and crypto payments into their existing client applications. The
+      product is designed to provide an easy way for companies looking to
+      upgrade their apps and save on development costs.
+    name: 'Fuse SDK and API '
+    stepItems: []
+    uuid: d681524e-8d9c-4ea1-8bed-016d1a452aa8
+  - content: >
+      The Mobile Stack enables companies to build mobile-first applications for
+      both iOS and Android platforms. With this stack, SMBs can easily create
+      their next app with Web3 capabilities powered by the Fuse network or
+      upgrade their existing apps by integrating the Fuse Flutter SDK.
+    name: Mobile Stack
+    stepItems: []
+    uuid: 7be9cba6-3f52-47a2-aea2-13c55f200fe2
+  - content: >-
+      To make the Fuse Network suitable for payments, we have been pioneering
+      the development of Account Abstraction and researching the integration of
+      privacy functions using innovative Web3 solutions like smart contract
+      wallets, Decentralized Identifier solutions (DIDs), non-transferable
+      tokens representing a person's identity (SBTs).
+
+      ‍
+
+      Alongside these efforts, we are rolling out advanced features and services
+      for payments, such as - accounting, invoicing, recurring and automated
+      payments, credit scoring, consumer protection, and more.
+
+      ‍
+
+      Overall, Fuse gives businesses and communities an opportunity to build
+      customized mobile-first payment solutions (digital tokens and wallets) and
+      embrace DeFi services at a very low cost in terms of money and time
+      without the hassle of dealing with complex blockchain processes.
+
+      ‍
+
+      By easily creating a mobile-first environment with Fuse, an organization
+      turns its audience from a simple community into a whole micro-economy. And
+      the end-user profits from this, leveraging fast, cheap (a fee for a Fuse
+      transaction is lower than 1 US Cent), accurate and sophisticated mobile
+      payments.
+    name: How is Fuse different?
+    stepItems: []
+    uuid: 9accd075-7e45-460f-9b44-ecdaaefd9c11
+  - content: >-
+      Fuse wallet is an iOS and Android non-custodial Web3 wallet — it can be
+      used in any EVM-compatible blockchain.
+
+      ‍
+
+      The Fuse Wallet SDK is a pre-built set of functions and utilities for
+      creating, managing, and engaging with Fuse Smart Wallets in client
+      applications in a secure and efficient manner. 
+
+
+      Fuse Smart Wallets are smart contract wallets associated with each user's
+      Externally Owned Account (EOA) that provide added security compared to
+      traditional EOAs with a single private key. With Fuse Smart Wallets, users
+      can deposit funds that no one else can control and withdraw them at any
+      time.
+
+      ‍
+
+      Fuse Smart Wallet Provides Several Significant Benefits, Including
+
+      ‍
+
+      Enhanced security: Fuse Smart Wallets are non-custodial accounts that
+      allow users to deposit funds that no one else can control and withdraw at
+      any time. Each Fuse Smart Wallet is a smart contract associated with the
+      user's EOA and can only be controlled by that user.
+
+      ‍
+
+      Enhanced UX: Fuse Smart Wallets support gasless transactions, improving
+      the user experience and making it more seamless to interact with the
+      blockchain.
+
+      ‍
+
+      Better developer experience: The Fuse Wallet SDK abstracts away the
+      complexities of web3 development, such as cryptography, wallet management,
+      and smart contract interactions, making it easier for developers to build
+      blockchain-based applications.
+    name: Fuse Wallet SDK
+    stepItems: []
+    uuid: 2eeb03fb-735a-4ba2-9d3f-a19fbdd28553
+  - content: >-
+      Since its establishment in 2019, Fuse has been gaining traction. The
+      number of businesses joining Fuse and using its services is constantly
+      growing, averaging over 80,000 tx daily, with over 1.3 million unique
+      accounts and 180,000 customers onboarded; all while maintaining a 99.9%
+      uptime.
+
+      ‍
+
+      Fuse aims to become the main B2B blockchain, tailor-made for payments, as
+      evidenced in our growing ecosystem of projects, such as food delivery
+      apps, consumer loyalty, charity programs, local currencies, local or
+      branded stablecoins, etc.
+
+      ‍
+
+      One example of a business showcasing the power of the Fuse tech stack is
+      Bitazza (South East Asia). Bitazza created a blockchain-enabled web3
+      mobile wallet running on the Fuse Network, built using Fuse’s API.
+
+      ‍
+
+      Freedom Wallet allows businesses to utilize tokens and NFTs, social
+      recovery in case of lost passwords, and the availability of escrow
+      services. Bitazza’s token holders also qualify for credit card rebates
+      through staking and can spend their tokens at an increasing number of
+      retailers across South East Asia. The Freedom Wallet has over 1M installs
+      to date.
+    name: Who is using Fuse?
+    stepItems: []
+    uuid: d07bbd9c-ee0e-4294-9057-b7760d986b18
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: what-is-fuse-network-fuse
