--- a/src/guides/main/what-is-fuse-network-fuse-818.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse-818.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Learn all about our tech stack '
-created: '2023-08-03T05:54:14.989Z'
+created: '2023-08-03T05:54:43.122Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse-818
 name: What is Fuse Network?
@@ -55,11 +55,7 @@ steps:
       businesses and entrepreneurs to leverage the power of Web3 and build
       innovative decentralized applications.
     name: What is Fuse Network?
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: c813f4a1-fe27-435b-9bba-b3bb502d8efb
+    stepItems: []
     uuid: b0f8519e-84c8-4ffb-bb8d-95f7b3462c2c
   - content: ''
     name: Test Your Knowledge
@@ -138,5 +134,5 @@ steps:
     uuid: 7cc6f7d8-1203-458d-bae7-d025e14001ac
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 2ff9ec78-8ded-4afb-9d34-3ce9b3938e72
+uuid: what-is-fuse-network-fuse-818
 version: 1
