--- a/src/guides/main/what-is-account-abstraction-fuse-615.yaml
+++ b/src/guides/main/what-is-account-abstraction-fuse-615.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn all about AA
-created: '2023-08-03T05:58:32.895Z'
+created: '2023-08-03T05:58:44.910Z'
 guideType: onboarding
 key: what-is-account-abstraction-fuse-615
 name: What is Account Abstraction
@@ -56,11 +56,7 @@ steps:
       without needing cryptocurrency in their accounts, account abstraction
       makes it easier for people to access and use blockchain technology.
     name: What is Account Abstraction
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: 46b6ff7e-3892-4ccd-898b-f1667beea802
+    stepItems: []
     uuid: e4786b72-6e59-4b53-8cc7-06f2d6845a2e
   - content: ''
     name: Test Your Knowledge
@@ -160,5 +156,5 @@ steps:
     uuid: 63b32d54-672e-49c9-b2ac-a78725eb7209
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 616385cc-1501-4ef3-ba9a-37e050b8483f
+uuid: what-is-account-abstraction-fuse-615
 version: 1
