update guide What are Web3 Payments?

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -1,3 +1,4 @@
 guides:
   - what-is-fuse-network-fuse-818.yaml
   - what-is-account-abstraction-fuse-615.yaml
+  - what-are-web3-payments-fuse-104.yaml
