--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -2,3 +2,4 @@ guides:
   - what-is-fuse-network-fuse-818.yaml
   - what-is-account-abstraction-fuse-615.yaml
   - what-are-web3-payments-fuse-104.yaml
+  - fuse-in-2023-beyond-fuse-740.yaml
