--- a/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
+++ b/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: New Guide
-created: '2023-08-03T06:06:37.573Z'
+created: '2023-08-03T06:06:58.057Z'
 guideType: onboarding
 key: fuse-in-2023-beyond-fuse-740
 name: Fuse in 2023 & Beyond
@@ -68,7 +68,7 @@ steps:
     stepItems: []
     uuid: daeacd31-ec9c-4259-8d4b-d7df46c710ef
   - content: ''
-    name: Test Your Knoledge
+    name: Test Your Knowledge
     stepItems:
       - answerKeys:
           - B
@@ -144,5 +144,5 @@ steps:
     uuid: d8d485a8-9e6d-49b4-9338-5eb3f279e77d
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: ec1df35e-4094-4531-9547-1ef74b90e758
+uuid: fuse-in-2023-beyond-fuse-740
 version: 1
