update guide Roles & Entities at Fuse

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -3,3 +3,4 @@ guides:
   - what-is-account-abstraction-fuse-615.yaml
   - what-are-web3-payments-fuse-104.yaml
   - fuse-in-2023-beyond-fuse-740.yaml
+  - roles-entities-at-fuse-fuse-130.yaml
