update guide What is FUSE Staking

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -4,3 +4,4 @@ guides:
   - what-are-web3-payments-fuse-104.yaml
   - fuse-in-2023-beyond-fuse-740.yaml
   - roles-entities-at-fuse-fuse-130.yaml
+  - what-is-fuse-staking-fuse-260.yaml
