update guide What is FUSE Staking?

--- a/src/guides/main/what-is-fuse-staking-fuse-260.yaml
+++ b/src/guides/main/what-is-fuse-staking-fuse-260.yaml
@@ -1,16 +1,16 @@
 categories: []
 content: Put FUSE to Work with Staking
-created: '2023-08-03T06:24:21.272Z'
+created: '2023-08-03T06:25:24.404Z'
 guideType: onboarding
 key: what-is-fuse-staking-fuse-260
-name: What is FUSE Staking
+name: What is FUSE Staking?
 publishStatus: Live
 steps:
   - content: >-
       FUSE Staking is a process that allows holders of FUSE tokens to earn a
       passive income. By locking up their tokens, they can earn an annual
-      percentage yield (APY) of more than 14%. This means that if you stake
-      $1000 worth of FUSE tokens, you could earn around $150 in passive income
+      percentage yield (APY) of more than 10%. This means that if you stake
+      $1000 worth of FUSE tokens, you could earn around $100 in passive income
       after one year.
 
 
