--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -5,3 +5,4 @@ guides:
   - fuse-in-2023-beyond-fuse-740.yaml
   - roles-entities-at-fuse-fuse-130.yaml
   - what-is-fuse-staking-fuse-260.yaml
+  - what-is-web3-fuse-773.yaml
