--- a/src/guides/main/what-is-web3-fuse-773.yaml
+++ b/src/guides/main/what-is-web3-fuse-773.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: New Guide
-created: '2023-08-03T06:28:46.480Z'
+created: '2023-08-03T06:29:29.146Z'
 guideType: onboarding
 key: what-is-web3-fuse-773
 name: 'What is Web3? '
@@ -182,6 +182,6 @@ steps:
           and anonymous digital identities through Ethereum addresses.
     uuid: 7aac1fb4-1c6b-434b-9d3f-39b8c94bb070
 thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 65864326-858e-4ef7-b06a-d160a3d23b2c
+  https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_web3_fuse_773/1691044164941_undraw_connected_world_wuay.png
+uuid: what-is-web3-fuse-773
 version: 1
