update guide What is Web3?

--- a/src/guides/main/what-is-web3-fuse-773.yaml
+++ b/src/guides/main/what-is-web3-fuse-773.yaml
@@ -1,6 +1,6 @@
 categories: []
-content: New Guide
-created: '2023-08-03T06:29:29.146Z'
+content: Learn about Web 3.0
+created: '2023-08-03T06:30:18.985Z'
 guideType: onboarding
 key: what-is-web3-fuse-773
 name: 'What is Web3? '
