--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -6,3 +6,4 @@ guides:
   - roles-entities-at-fuse-fuse-130.yaml
   - what-is-fuse-staking-fuse-260.yaml
   - what-is-web3-fuse-773.yaml
+  - what-is-fuse-ignite-fuse-867.yaml
