--- a/src/guides/main/what-are-web3-payments-fuse-104.yaml
+++ b/src/guides/main/what-are-web3-payments-fuse-104.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Everything you need to know about crypto payments
-created: '2023-08-03T06:22:12.924Z'
+created: '2023-08-03T14:51:27.003Z'
 guideType: onboarding
 key: what-are-web3-payments-fuse-104
 name: 'What are Web3 Payments? '
@@ -150,6 +150,10 @@ steps:
         explanation: >-
           Businesses should consider factors like transaction speed and fees
           when choosing cryptocurrencies for Web3 payments.
+      - label: Email
+        required: true
+        type: PublicShortInput
+        uuid: 73808ed5-5e26-4a00-a099-9cb209178eb3
     uuid: b975c031-89a5-42f0-955a-57e58476bbac
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_are_web3_payments_fuse_104/1691043729480_undraw_product_explainer_8jbm.png
