--- a/src/guides/main/what-is-web3-fuse-773.yaml
+++ b/src/guides/main/what-is-web3-fuse-773.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn about Web 3.0
-created: '2023-08-03T06:30:18.985Z'
+created: '2023-08-03T14:55:20.306Z'
 guideType: onboarding
 key: what-is-web3-fuse-773
 name: 'What is Web3? '
@@ -180,6 +180,14 @@ steps:
           Some benefits of Web3 include ownership of digital assets, censorship
           resistance, decentralized autonomous organizations (DAOs), and secure
           and anonymous digital identities through Ethereum addresses.
+      - label: Email
+        required: true
+        type: PublicShortInput
+        uuid: 92ce14c5-9f63-46c2-85a6-123898072347
+      - label: EVM Compatible Wallet Address
+        required: true
+        type: PublicShortInput
+        uuid: 98e06121-8c91-47c3-b608-310c7af18f03
     uuid: 7aac1fb4-1c6b-434b-9d3f-39b8c94bb070
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_web3_fuse_773/1691044164941_undraw_connected_world_wuay.png
