--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -7,3 +7,4 @@ guides:
   - what-is-fuse-staking-fuse-260.yaml
   - what-is-web3-fuse-773.yaml
   - what-is-fuse-ignite-fuse-867.yaml
+  - 4th-birthday-quiz-fuse-512.yaml
