--- a/src/guides/main/what-is-fuse-network-fuse-818.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse-818.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Learn all about our tech stack '
-created: '2023-08-07T13:29:57.332Z'
+created: '2023-08-07T15:28:19.566Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse-818
 name: What is Fuse Network?
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Fuse Network is a decentralized blockchain platform that was created in
