--- a/src/guides/main/what-is-account-abstraction-fuse-615.yaml
+++ b/src/guides/main/what-is-account-abstraction-fuse-615.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Learn all about AA
-created: '2023-08-07T13:34:03.011Z'
+created: '2023-08-07T15:28:33.362Z'
 guideType: onboarding
 key: what-is-account-abstraction-fuse-615
 name: What is Account Abstraction?
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Account abstraction is a concept in blockchain technology that simplifies
