--- a/src/guides/main/what-are-web3-payments-fuse-104.yaml
+++ b/src/guides/main/what-are-web3-payments-fuse-104.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Everything you need to know about crypto payments
-created: '2023-08-03T14:52:06.017Z'
+created: '2023-08-07T15:30:30.936Z'
 guideType: onboarding
 key: what-are-web3-payments-fuse-104
 name: 'What are Web3 Payments? '
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Web3 payments refer to the use of blockchain technology to facilitate the
