update guide Fuse in 2023 & Beyond

--- a/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
+++ b/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Fuse has made significant progress in 2023
-created: '2023-08-03T14:52:52.778Z'
+created: '2023-08-07T15:30:42.991Z'
 guideType: onboarding
 key: fuse-in-2023-beyond-fuse-740
 name: Fuse in 2023 & Beyond
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Fuse has made significant progress in 2023 and has exciting updates and
