--- a/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
+++ b/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Merchants, Operators, and Power Validators
-created: '2023-08-03T14:54:05.294Z'
+created: '2023-08-07T15:31:43.756Z'
 guideType: onboarding
 key: roles-entities-at-fuse-fuse-130
 name: Roles & Entities at Fuse
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Fuse Network is a payment-focused blockchain ecosystem that aims to become
