update guide What is FUSE Staking?

--- a/src/guides/main/what-is-fuse-staking-fuse-260.yaml
+++ b/src/guides/main/what-is-fuse-staking-fuse-260.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Put FUSE to Work with Staking
-created: '2023-08-03T14:54:52.194Z'
+created: '2023-08-07T15:31:57.494Z'
 guideType: onboarding
 key: what-is-fuse-staking-fuse-260
 name: What is FUSE Staking?
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       FUSE Staking is a process that allows holders of FUSE tokens to earn a
