--- a/src/guides/main/what-is-web3-fuse-773.yaml
+++ b/src/guides/main/what-is-web3-fuse-773.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Learn about Web 3.0
-created: '2023-08-03T14:55:20.306Z'
+created: '2023-08-07T15:32:11.448Z'
 guideType: onboarding
 key: what-is-web3-fuse-773
 name: 'What is Web3? '
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Web3 is a term used to describe the vision of a new and improved internet.
