--- a/src/guides/main/4th-birthday-quiz-fuse-512.yaml
+++ b/src/guides/main/4th-birthday-quiz-fuse-512.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Win your share of FUSE tokens!  '
-created: '2023-08-08T06:07:53.591Z'
+created: '2023-09-13T12:26:41.121Z'
 guideType: onboarding
 key: 4th-birthday-quiz-fuse-512
 name: 4th Birthday Quiz
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >
       Between the 9th and 13th of August 2023, the first 100 people to answer
