update guide What is Fuse Network?

--- a/src/guides/main/what-is-fuse-network-fuse-818.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse-818.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Learn all about our tech stack '
-created: '2023-08-07T15:28:19.566Z'
+created: '2023-09-13T12:27:07.194Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse-818
 name: What is Fuse Network?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Network is a decentralized blockchain platform that was created in
