--- a/src/guides/main/what-are-web3-payments-fuse-104.yaml
+++ b/src/guides/main/what-are-web3-payments-fuse-104.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Everything you need to know about crypto payments
-created: '2023-08-07T15:30:30.936Z'
+created: '2023-09-13T12:29:56.987Z'
 guideType: onboarding
 key: what-are-web3-payments-fuse-104
 name: 'What are Web3 Payments? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Web3 payments refer to the use of blockchain technology to facilitate the
