--- a/src/guides/main/what-is-fuse-ignite-fuse-867.yaml
+++ b/src/guides/main/what-is-fuse-ignite-fuse-867.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Developer Funding & Grants
-created: '2023-08-07T15:32:27.563Z'
+created: '2023-09-13T12:31:28.225Z'
 guideType: onboarding
 key: what-is-fuse-ignite-fuse-867
 name: What is Fuse Ignite?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Ignite is a funding program launched by Fuse with a budget of over
