update guide Roles & Entities at Fuse

--- a/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
+++ b/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Merchants, Operators, and Power Validators
-created: '2023-08-07T15:31:43.756Z'
+created: '2023-09-13T12:31:47.887Z'
 guideType: onboarding
 key: roles-entities-at-fuse-fuse-130
 name: Roles & Entities at Fuse
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Network is a payment-focused blockchain ecosystem that aims to become
