--- a/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
+++ b/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Fuse has made significant progress in 2023
-created: '2023-08-07T15:30:42.991Z'
+created: '2023-09-13T12:32:14.339Z'
 guideType: onboarding
 key: fuse-in-2023-beyond-fuse-740
 name: Fuse in 2023 & Beyond
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse has made significant progress in 2023 and has exciting updates and
