--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -8,3 +8,4 @@ guides:
   - what-is-web3-fuse-773.yaml
   - what-is-fuse-ignite-fuse-867.yaml
   - 4th-birthday-quiz-fuse-512.yaml
+  - how-to-use-the-fuse-token-bridge-fuse-139.yaml
