--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -9,3 +9,4 @@ guides:
   - what-is-fuse-ignite-fuse-867.yaml
   - 4th-birthday-quiz-fuse-512.yaml
   - how-to-use-the-fuse-token-bridge-fuse-139.yaml
+  - deploy-smart-contract-on-fuse-fuse-644.yaml
