--- a/src/guides/main/deploy-smart-contract-on-fuse-fuse-644.yaml
+++ b/src/guides/main/deploy-smart-contract-on-fuse-fuse-644.yaml
@@ -1,9 +1,9 @@
 categories: []
 content: Fuse Network is an EVM compatible blockchain
-created: '2023-09-26T11:39:26.799Z'
+created: '2023-09-26T11:43:09.840Z'
 guideType: onboarding
 key: deploy-smart-contract-on-fuse-fuse-644
-name: Deploy Smart Contract on Fuse
+name: Deploy Smart Contracts on Fuse
 publishStatus: Live
 steps:
   - content: >-
@@ -112,5 +112,5 @@ steps:
     uuid: c0e23f81-b4ea-4626-9fee-7ec15b65abae
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/79374593_3bbf_4e09_915d_a41089fc5fc8/1695728023388_undraw_to_the_stars_re_wq2x.svg
-uuid: 79374593-3bbf-4e09-915d-a41089fc5fc8
+uuid: deploy-smart-contract-on-fuse-fuse-644
 version: 1
