update guide How to Stake $FUSE

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -10,3 +10,4 @@ guides:
   - 4th-birthday-quiz-fuse-512.yaml
   - how-to-use-the-fuse-token-bridge-fuse-139.yaml
   - deploy-smart-contract-on-fuse-fuse-644.yaml
+  - how-to-stake-fuse-fuse-658.yaml
