update guide Voltage Finance Bridge

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -11,3 +11,4 @@ guides:
   - how-to-use-the-fuse-token-bridge-fuse-139.yaml
   - deploy-smart-contract-on-fuse-fuse-644.yaml
   - how-to-stake-fuse-fuse-658.yaml
+  - voltage-finance-bridge-fuse-196.yaml
