update guide How to Use Voltage Bridge

--- a/src/guides/main/voltage-finance-bridge-fuse-196.yaml
+++ b/src/guides/main/voltage-finance-bridge-fuse-196.yaml
@@ -1,9 +1,9 @@
 categories: []
 content: Fuse <> Ethereum Bridge
-created: '2023-09-26T12:26:01.503Z'
+created: '2023-09-26T12:26:15.646Z'
 guideType: onboarding
 key: voltage-finance-bridge-fuse-196
-name: Voltage Finance Bridge
+name: How to Use Voltage Bridge
 publishStatus: Live
 steps:
   - content: >-
