--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -12,3 +12,4 @@ guides:
   - deploy-smart-contract-on-fuse-fuse-644.yaml
   - how-to-stake-fuse-fuse-658.yaml
   - voltage-finance-bridge-fuse-196.yaml
+  - what-is-voltage-finance-fuse-478.yaml
