--- a/src/guides/main/what-is-voltage-finance-fuse-478.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-478.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Fuse Network''s Leading DEX and Mobile DeFi App '
-created: '2024-01-15T08:48:04.748Z'
+created: '2024-01-15T08:49:34.385Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-478
 name: 'What is Voltage Finance? '
@@ -138,7 +138,15 @@ steps:
         explanation: >-
           The token bridge feature in Voltage Finance enables users to move
           tokens between Fuse, Ethereum, and BNB Chain.
+      - label: 'Wallet Address '
+        required: true
+        type: PrivateShortInput
+        uuid: 5fa56d0e-ae3e-4fdf-b6ad-4c2fd3dd3f48
     uuid: 14874597-59e1-4813-8d83-a87bcc3bbda0
+  - content: ''
+    name: Step 3
+    stepItems: []
+    uuid: e50a0f00-fdf4-4e6c-bc7f-7ce50240521f
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/fa65693d_8598_4c27_9eb7_213f7281a033/1705307783351_undraw_transfer_money_re_6o1h_%282%29.svg
 uuid: what-is-voltage-finance-fuse-478
