update guide What is Voltage Finance?

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -13,3 +13,4 @@ guides:
   - how-to-stake-fuse-fuse-658.yaml
   - voltage-finance-bridge-fuse-196.yaml
   - what-is-voltage-finance-fuse-478.yaml
+  - what-is-voltage-finance-fuse-547.yaml
